--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -23,10 +23,13 @@
     "react-flatpickr": "^3.10.7",
     "react-image-lightbox": "^5.1.1",
     "react-intl": "^5.20.2",
+    "react-markdown-editor-lite": "^1.3.0",
+    "react-markdown-it": "^1.0.2",
     "react-redux": "^7.2.4",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
+    "react-select": "^4.3.1",
     "react-slick": "^0.29.0",
     "react-toastify": "^5.5.0",
     "reactstrap": "^8.9.0",
